higher permgen