@@ -96,7 +96,7 @@ set GROOVY_SCRIPT_NAME=gant.bat
 
 set STARTER_CONF=%GANT_HOME%\conf\gant-starter.conf
 
-set JAVA_OPTS=%JAVA_OPTS% -Dgant.home="%GANT_HOME%" -Dant.home="%ANT_HOME%" -Xmx512m
+set JAVA_OPTS=%JAVA_OPTS% -Dgant.home="%GANT_HOME%" -Dant.home="%ANT_HOME%" -Xmx512m -XX:MaxPermSize=150m
 
 
 
